@@ -1,8 +1,9 @@
 Begin4
 Title:		hdparm
-Version:	9.0
-Entered-date:	2008-11-02
+Version:	9.1
+Entered-date:	2008-11-03
 Description:	hdparm - get/set hard disk parameters for Linux SATA/IDE drives.
+		v9.1 tidy output of --dco-identify, update manpage
 		v9.0 new --dco-* and --fwdownload flags, sg16 fixes, updated debian subdir
 		v8.9 make compatible with /sys/block symlinks
 		v8.8 bug fixes from v8.7, including -r, -a, -Q
@@ -74,7 +75,7 @@ Author:		mlord@pobox.com (Mark Lord)
 Maintained-by:	mlord@pobox.com (Mark Lord)
 Primary-site:	http://sourceforge.net/projects/hdparm/
 Alternate-site:	http://www.ibiblio.org/pub/Linux/system/hardware
-		93K hdparm-9.0.tar.gz
+		93K hdparm-9.1.tar.gz
 		4K hdparm.lsm
 Platforms:	Linux, kernels 2.2 through 2.6
 Copying-policy:	BSD License
